crates/ic-lint/tests/snapshots/recursive_type__direct_struct_recursion.snap
---
source: crates/ic-lint/tests/recursive_type.rs
expression: output
---
error[recursive_type]: type `Node` contains itself without indirection
   ┌ test.idl:4:18
   │
 4 │             Node next;  // Error: direct recursion without indirection
   ·                  ^^^^ recursive member here
   └──
 note: recursive types must use indirection through sequences, maps, or @external annotations
