crates/ic-lint/tests/snapshots/recursive_type__exhaustive_enum_union_with_external_arms.snap
---
source: crates/ic-lint/tests/recursive_type.rs
expression: output
---
⨯ recursive-type: type `W` can never be finitely constructed
  @ test.idl:5:38

 3 │ struct A;
 4 │ union W switch (Choice) {
 5 │     case FIRST:  @external A a;
   │                              ˆ `W` contains `A` here
 6 │     case SECOND: @external A b;
   │                              ˆ `W` contains `A` here
 7 │ };
 8 │ struct A { W w; };
   │              ˆ `A` contains `W` here

  ? break the cycle with an indirection that terminates
  * cycle: W -> A -> W
